# pysochrone

./: .gitignore  __init__.py  iso_get.py  iso_interpolate.py  setup.cfg  setup.py
pysochrone/: __init__.py  imf.py  iso_interpolate.py
