[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[metadata]
package_name = pysochrone
description = None
long_description = This is a package for doing X that relies on astropy
author = John Doe
author_email = johndoe@nowhere.com
license = BSD
url = None
edit_on_github = False
github_project = wkerzendorf/pysochrone